fix overflow issue when website resizes,color style, and links so that they open in a new tab

--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,14 @@
 html{ font-family: cursive;}
 body
 {
-	height:1600px;background: -webkit-linear-gradient(black , white ); 
+	height:100% ;background: -webkit-linear-gradient(black , gray ); 
 }
 #personal
 {
-	position: absolute;
-	top:0px;
+	position: relative;
+	top:0%;
 	width:100%;
-	left:0px;
+	left:0%;
 	font-family: cursive;
 	text-align: center;
 	color: white ;
@@ -16,11 +16,11 @@ body
 }
 #goal
 {
-	position: absolute;
+	position: relative;
 	width: 100%;
 	text-align:center;
-	top:239px;
-	left: 0px;
+	top:0%;
+	left: 0%;
 	border-style: groove;
 	color: white;
 	
@@ -29,11 +29,11 @@ body
 }
 #goal2
 {
-	position: absolute;
+	position: relative;
 	width: 100%;
 	text-align:center;
-	top:429px;
-	left: 0px;
+	top:0%;
+	left: 0%;
 	border-bottom:  groove;
 	border-left: groove;
 	border-right: groove;
@@ -41,11 +41,13 @@ body
 }
 #skills
 {
-	position: absolute;
+	margin-bottom: 0%;
+	padding-bottom: 0%;
+	position: relative;
 	width: 100%;
 	text-align:center;
-	top:1035px;
-	left: 0px;
+	top:0%;
+	left: 0%;
 	border-bottom:  groove;
 	border-left: groove;
 	border-right: groove;
@@ -60,7 +62,7 @@ img.prof
 	top:2%;
 	right: 2%;
 	width: 20%;
-	opacity: ..8;
+	opacity: .8;
 }
 img.logo
 {
@@ -132,7 +134,7 @@ a:hover
 }
 #top a:hover
 {
-	color:gray;
+	color:white;
 }
 #table
 {
@@ -158,13 +160,23 @@ td.newalign2
 }
 #project
 {
-	position: absolute;
+	margin-top: -1.7%;
+	padding-top: 0%;
+	position: relative;
 	width: 100%;
 	text-align:center;
-	top:1275px;
-	left: 0px;
+	top:0%;
+	left: 0%;
 	border-bottom:  groove;
 	border-left: groove;
 	border-right: groove;
 	color: white;
+}
+.under
+{
+	text-decoration: underline;
+}
+.under a:hover
+{
+	color: black;
 }
